--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       background: radial-gradient(circle at top, #0f172a 0, #020617 45%, #000 100%);
       color: var(--soft-white);
       font-family: "Space Grotesk", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      overflow: hidden;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
 
     body {
