--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     }
 
     body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      display: block;
+      /* align-items: center;
+      justify-content: center; */
     }
 
     .noise-overlay {
@@ -120,7 +120,7 @@
       position: relative;
       z-index: 2;
       width: min(960px, 100% - 3rem);
-      max-height: min(640px, 100% - 3rem);
+      /* max-height: min(640px, 100% - 3rem); */
       border-radius: 24px;
       border: 1px solid rgba(148, 163, 184, 0.45);
       background:
