--- a/index.html
+++ b/index.html
@@ -572,6 +572,22 @@
         letter-spacing: 0.14em;
       }
     }
+
+    @media (max-width: 600px) {
+  .hero-copy {
+    font-size: 0.9rem;
+    line-height: 1.6;
+    max-width: none;
+  }
+
+  .shell {
+    padding: 1rem 1.1rem 1.6rem;
+  }
+
+  .shell-main {
+    gap: 1.25rem;
+  }
+}
   </style>
 </head>
 <body>
