--- a/index.html
+++ b/index.html
@@ -675,30 +675,22 @@
             </div>
           </div>
 
-          <div class="metric-card">
-            <div class="metric-label">Phase 01 ETA</div>
-            <div class="metric-sub">
-              Countdown is approximate. Final launch date will be announced on campus channels.
-            </div>
-            <div class="countdown" aria-hidden="true">
-              <div class="countdown-box">
-                <div class="countdown-box-value">00</div>
-                <div class="countdown-box-label">Days</div>
-              </div>
-              <div class="countdown-box">
-                <div class="countdown-box-value">00</div>
-                <div class="countdown-box-label">Hours</div>
-              </div>
-              <div class="countdown-box">
-                <div class="countdown-box-value">00</div>
-                <div class="countdown-box-label">Minutes</div>
-              </div>
-              <div class="countdown-box">
-                <div class="countdown-box-value">SYNC</div>
-                <div class="countdown-box-label">Mode</div>
-              </div>
-            </div>
-          </div>
+<div class="metric-card">
+  <div class="metric-label">ORIGIN PROTOCOL</div>
+  <div class="metric-value">
+    <span>A Team Reload Initiative</span>
+    <span class="code">@thereloadsquad</span>
+  </div>
+  <p class="metric-sub">
+    Operations, concept and early deployment handled off-grid by Team Reload.
+    If you know, you know.
+  </p>
+  <div class="chips-row" style="margin-top:0.35rem;">
+    <span class="chip hot">CORE OPS</span>
+    <span class="chip">FIELD: CAMPUS UNDERGROUND</span>
+    <span class="chip">CHANNEL: IG</span>
+  </div>
+</div>
         </div>
       </aside>
     </section>
