--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <meta name="description" content="SYNQ is the underground student network of Assam down town University — a cyberpunk-style hub for skills, collabs, events, freelancing, and campus life. Launching soon." />
+  <meta name="description" content="SYNQ is the underground student network of Assam down town University — a all-in-one hub for skills, collabs, events, freelancing, and campus life. Launching soon." />
   <meta name="keywords" content="SYNQ, underground student network, Assam down town University, ADTU, students, freelancing, events, campus, cyberpunk" />
 
   <!-- Open Graph (for link previews) -->
   <meta property="og:title" content="SYNQ — The Underground Student Network" />
-  <meta property="og:description" content="A cyberpunk campus network for students: skills, collabs, events, and side-hustles in one place. Coming soon." />
+  <meta property="og:description" content="A all-in-one campus network for students: skills, collabs, events, and side-hustles in one place. Coming soon." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://synqnet.in" />
   <!-- <meta property="og:image" content="https://synqnet.in/og-image.png" /> -->
@@ -615,7 +615,7 @@
 
     <section class="shell-main">
       <div>
-        <div class="hero-label">Incoming Transmission</div>
+        <div class="hero-label">PROJECT LOADING...</div>
 
         <div class="logo-word" aria-label="SYNQ">
           <span class="logo-word-main">SYNQ</span>
