--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
 </nav>
 
     <button class="cta">Join</button>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+
+<label for="menu-toggle" class="menu-btn">Menu</label>
+
+<div class="mobile-menu">
+  <a href="#">Home</a>
+  <a class="accent" href="#">Most Wanted</a>
+  <a class="accent" href="#">Pulse</a>
+  <a class="accent" href="#">Cells</a>
+  <a class="accent" href="#">Exchange</a>
+  <a class="accent" href="#">Freelance</a>
+  <a href="#">Vision</a>
+</div>
+
+
   </header>
 
   <!-- MAIN CONTENT -->
