--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <div class="mobile-menu">
   <a href="#">Home</a>
   <a class="accent" href="#">Most Wanted</a>
-  <a class="accent" href="#">Pulse</a>
-  <a class="accent" href="#">Cells</a>
+  <a class="accent" href="#">Events</a>
+  <a class="accent" href="#">Communities</a>
   <a class="accent" href="#">Exchange</a>
   <a class="accent" href="#">Freelance</a>
   <a href="#">Vision</a>
